# cnbiros_wheelchair_description

./: CMakeLists.txt  package.xml
launch/: ros_wheelchair_description.launch  ros_wheelchair_description_NEW.launch  ros_wheelchair_rviz.launch  wheelchair_footprint.rviz  wheelchair_footprint_dynamics.rviz  wheelchair_model.rviz  wheelchair_simulation_gazebo.rviz
urdf/: .base.urdf.xacro.swp  .materials.urdf.xacro.swo  .seat.urdf.xacro.swp  .wheelchair.urdf.swn  .wheelchair.urdf.swo  base.urdf.xacro  base_NEW.urdf.xacro  materials.urdf.xacro  seat.urdf.xacro  sensors.urdf.xacro  wheelchair.gazebo  wheelchair.urdf  wheelchair.urdf.xacro  wheelchair_NEW.urdf.xacro  wheelchair_old.urdf
urdf/old/: materials.urdf.xacro  seat.urdf.xacro
urfd/: wheelchair.urdf
